[gd_scene load_steps=5 format=2]

[ext_resource path="res://content/shared/difficulty/skull_difficulties_panel.png" type="Texture" id=1]
[ext_resource path="res://content/shared/difficulty/skull_difficulties_2.png" type="Texture" id=2]
[ext_resource path="res://content/shared/difficulty/skull_difficulties_1.png" type="Texture" id=3]
[ext_resource path="res://content/shared/difficulty/DifficultyBadge.gd" type="Script" id=4]

[node name="DifficultyBadge" type="TextureRect" groups=["unstyled"]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1762.0
margin_bottom = -996.0
rect_min_size = Vector2( 158, 84 )
texture = ExtResource( 1 )
expand = true
script = ExtResource( 4 )

[node name="Skull1" type="TextureRect" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 54.0
margin_bottom = 68.0
expand = true

[node name="Skull2" type="TextureRect" parent="."]
margin_left = 60.0
margin_top = 16.0
margin_right = 98.0
margin_bottom = 68.0
texture = ExtResource( 3 )
expand = true

[node name="Skull3" type="TextureRect" parent="."]
margin_left = 104.0
margin_top = 16.0
margin_right = 142.0
margin_bottom = 68.0
texture = ExtResource( 2 )
expand = true
